fix(space-description): add truncation to space description when viewing another user's space (#3066)

--- a/src/app/dashboard-widgets/edit-space-description-widget/edit-space-description-widget.component.less
+++ b/src/app/dashboard-widgets/edit-space-description-widget/edit-space-description-widget.component.less
@@ -99,7 +99,7 @@
 
 .truncate-multiline {
   position: relative;
-  max-height: 4.4em;
+  max-height: 5em;
   text-align: justify;
   margin-right: -1em;
   padding-right: 1em;
